--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,8 @@
     grid-template-columns: 2fr 10fr;
     grid-gap: 10px;
 }
+
+.content{
+    grid-area: content;
+    background-color: #CCFFFF;
+}
