--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,9 +1,4 @@
-.content{
-    grid-area: content;
-    background-color: #CCFFFF;
-}
-
-.content img{
+.back img{
     width: 100%;
     height: 250px;
 }
