--- a/src/components/Messages/Messages.module.css
+++ b/src/components/Messages/Messages.module.css
@@ -1,3 +1,35 @@
-.messages_wrapper{
-    background-color: #CCFFFF;
+.message_wrapper{
+    display: grid;
+    grid-template-columns: 2fr 10fr;
+
+}
+
+.dialogues{
+    padding: 20px;
+}
+
+.dialogue_item {
+    margin-bottom: 30px;
+    color: black;
+}
+
+.dialogue_item a{
+    text-decoration: none;
+}
+.dialogue_active{
+    color:red;
+}
+
+.dialogue_inactive{
+    color: black;
+}
+
+.chat{
+
+}
+
+.chat_item{
+
+    padding: 20px;
+
 }
