--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,23 @@
 .app-wrapper{
-  display: grid;
-    width: 1200px;
     margin: 0 auto;
-
-
-    grid-template-areas:
-"header header"
-"nav content";
-    grid-template-rows: 60px 1fr;
-    grid-template-columns: 2fr 10fr;
-    grid-gap: 10px;
 }
 
 .content{
-    grid-area: content;
-    background-color: #CCFFFF;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    box-shadow: 0 0 6px -3px;
+    padding: 10px;
+}
+
+
+html{
+    background-color: #F1F1F1;
+}
+
+.bottom_part{
+    display: grid;
+    width: 1300px;
+    margin: 5px auto 0 auto;
+    grid-template-columns: 2fr 10fr;
+    grid-gap: 0 10px;
 }
