--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,4 +1,63 @@
+.info_wrapper{
+    position: relative;
+    height: 300px;
+    margin: 10px auto;
+}
+
 .back img{
+    object-fit: cover;
     width: 100%;
-    height: 250px;
+    height: 300px;
+    border-radius: 5px;
+
+}
+
+.back:before{
+    border-radius: 5px;
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 4px;
+    left: 0;
+    right: 0;
+    -webkit-box-shadow: 0px -150px 15px -26px rgba(0, 0, 0, 0.66) inset;
+    -moz-box-shadow: 0px -150px 15px -26px rgba(0, 0, 0, 0.66) inset;
+    box-shadow: 0px -150px 15px -26px rgba(0, 0, 0, 0.66) inset;
+
+}
+
+
+.back{
+    position: absolute;
+}
+
+.info_block{
+    position: absolute;
+}
+
+.avatar{
+    position: absolute;
+    width:80px;
+    border-radius: 40px;
+    border: 3px solid white;
+    top:190px;
+    left: 15px;
+}
+
+.name{
+    color:white;
+    font-size: 20pt;
+}
+
+.description{
+    color:white;
+}
+
+.text_info{
+    position: absolute;
+    top: 210px;
+    left: 120px;
+    width: 550px;
+
+
 }
