--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -20,9 +20,9 @@
     bottom: 4px;
     left: 0;
     right: 0;
-    -webkit-box-shadow: 0px -150px 15px -26px rgba(0, 0, 0, 0.66) inset;
-    -moz-box-shadow: 0px -150px 15px -26px rgba(0, 0, 0, 0.66) inset;
-    box-shadow: 0px -150px 15px -26px rgba(0, 0, 0, 0.66) inset;
+    -webkit-box-shadow: 0 -150px 15px -26px rgba(0, 0, 0, 0.66) inset;
+    -moz-box-shadow: 0 -150px 15px -26px rgba(0, 0, 0, 0.66) inset;
+    box-shadow: 0 -150px 15px -26px rgba(0, 0, 0, 0.66) inset;
 
 }
 
