--- a/src/components/Loading/Loading.module.css
+++ b/src/components/Loading/Loading.module.css
@@ -1,6 +1,6 @@
-.gif_block{
-    width:400px;
-    position: absolute;
-    top: 200px;
-    left:200px
+.text{
+    position:absolute;
+    width:100%;
+    top:50%;
+    text-align:center;
 }
