--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,10 +1,10 @@
-.info_wrapper{
+.info_wrapper {
     position: relative;
     height: 300px;
     margin: 10px auto;
 }
 
-.back img{
+.back img {
     object-fit: cover;
     width: 100%;
     height: 300px;
@@ -12,7 +12,7 @@
 
 }
 
-.back:before{
+.back:before {
     border-radius: 5px;
     content: "";
     position: absolute;
@@ -27,34 +27,34 @@
 }
 
 
-.back{
+.back {
     position: absolute;
 }
 
-.info_block{
+.info_block {
     position: absolute;
 }
 
-.avatar{
+.avatar {
     position: absolute;
-    width:80px;
+    width: 80px;
     border-radius: 40px;
     border: 3px solid white;
-    top:190px;
+    top: 190px;
     left: 15px;
 }
 
-.name{
-    color:white;
+.name {
+    color: white;
     font-size: 20pt;
     font-weight: bold;
 }
 
-.description{
-    color:white;
+.description {
+    color: white;
 }
 
-.text_info{
+.text_info {
     position: absolute;
     top: 210px;
     left: 120px;
@@ -63,8 +63,26 @@
 
 }
 
-.edit_button img{
+.edit_button img {
     width: 15px;
     padding-left: 10px;
+    cursor: pointer;
+}
+
+.upload_button{
+    color: #FE7555;
+    font-weight: bold;
+    font-size: 27pt;
+    position: absolute;
+    top: 29px;
+    left: -42px;
+    text-decoration: none;
+}
+
+.upload_button input{
+    display: none;
+}
+
+.upload_button label{
     cursor: pointer;
 }
